--- a/dada/extras/documentation/pod_source/dada9_to_dada10.pod
+++ b/dada/extras/documentation/pod_source/dada9_to_dada10.pod
@@ -2,7 +2,7 @@
 
 =head1 Dada Mail 9 to Dada Mail 10 Upgrade Guide
 
-This guide was compiled to get you ready for upgrade to Dada Mail v10.
+This guide was compiled to get you ready to upgrade to Dada Mail v10.
 
 =head2 Focus
 
@@ -13,10 +13,10 @@ You can learn more about Foudnation for Emails, here:
 
 L<http://foundation.zurb.com/emails.html>
 
-In past versions of Dada Mail, ALL transctional email messages only had a plaintext-only "option" available. The new HTML emails look so much better, and probably rank much higher on usability. We're excited!
+In past versions of Dada Mail, ALL transactional email messages only had a plaintext-only "option" available. The new HTML emails look so much better, and probably rank much higher on usability. We're excited!
 
 To support Foundation for Emails, we've had to make I<considerable> changes to 
-the internal code of Dada Mail. A new dependency is now required to run Dada Mail: the Perl CPAN module, B<LWP>. This is the same module required to use the B<Send a Webpage> screen. If B<Send a Webpage> is working, you should be covered for this dependency. 
+the internal code of Dada Mail. A new dependency is now required to run Dada Mail: the Perl CPAN module, C<LWP>. This is the same module required to use the B<Send a Webpage> screen. If B<Send a Webpage> is working, you should be covered for this dependency. 
 
 The following CPAN Perl Modules aren't required, but definitely recommended to 
 have the best experience when running Dada Mail: 
@@ -33,10 +33,16 @@ have the best experience when running Dada Mail:
 
 =back
 
-Because the workflow to create the new HTML emails is based on Foundation for Emails SASS workflow (L<https://foundation.zurb.com/emails/docs/sass-guide.html>),
-which is done offline (via your desktop/laptop/etc), we've removed the ability to edit these messages from within Dada Mail through the B<Apperance - Email Message Templates> screen. The HTML produced by the  framework is exceptionally complex - they just cannot be easily edited by hand. Using the SASS workflow 
-is actally pretty approachable by a competent web designer or developer. 
+These modules and other, optional CPAN Perl modules used by Dada Mail have been bundled together in one CPAN Module called, C<Bundle::DadaMail>. You can now just install this one module, and have all those other modules installed in one step. 
 
-We will try to create instructions on how to fetch a starter collection of email message templates, so you may create your own customized email themes. 
+Because the workflow to create the new HTML emails is based on Foundation for Emails SASS workflow (L<https://foundation.zurb.com/emails/docs/sass-guide.html>),
+which is done offline (via your desktop/laptop/etc), 
+we've removed the ability to edit these messages from within Dada Mail through the B<Apperance - Email Message Templates> screen. 
+The HTML produced by the  framework is exceptionally complex - they just cannot be easily edited by hand. 
+Using the SASS workflow is actally pretty approachable by a competent web designer or developer. 
+
+Here's how to work with email themes, and create your own:
+
+L<http://dadamailproject.com/d/features-email_themes.pod>
 
 =cut
