--- a/dada/extras/documentation/pod_source/requirements.pod
+++ b/dada/extras/documentation/pod_source/requirements.pod
@@ -4,7 +4,7 @@
 
 Requirements needed to run Dada Mail
 
-Dada Mail is designed to be fairly flexible in the type of environment you run it in, so long as that environment is Unix/Linux-like, you have access to Perl v5.10.1 or later and your web server can execute CGI scripts. 
+Dada Mail is designed to be fairly flexible in the type of environment you run it in, so long as that environment is Unix/Linux-like, you have access to Perl v5.10.1 or later, and your web server can execute CGI scripts. 
 
 =head2 Environment
 
@@ -14,7 +14,7 @@ Dada Mail can be run is a simple CGI app, a FastCGI app, or as a PSGI app.
 
 Dada Mail is not a desktop application. 
 
-When we talk about what operating system, version of Perl, etc that's needed for Dada Mail to run - we're talking about what's needed on the I<server> end. All you need to use Dada Mail is a modern web browser (we suggest Mozilla Firefox)  and because of this, any operating system that can run a modern web browser can be used.
+When we talk about what operating system, version of Perl, etc that's needed for Dada Mail to run - we're talking about what's needed on the I<server> end. All you need to use Dada Mail is a modern web browser (we suggest Firefox)  and because of this, any operating system that can run a modern web browser can be used.
 
 =head2 Supported Operating Systems
 
@@ -33,7 +33,6 @@ L<http://dadamailproject.com/d/FAQ-errors.pod.html#Perl-Version>
 Since Dada Mail is a CGI app, you'll need support for Perl CGI scripts within your web server environment. 
 
 Dada Mail is not a PHP script, so the version of PHP that you have available will not make much of a difference. 
-
 
 =head2 Mail Transport Agent
 
@@ -74,6 +73,10 @@ L<https://metacpan.org/pod/DBD::SQLite>
 If these modules are not available, you'll need to install them using the operating system package management system, or using the C<cpan> or C<cpanm> command line tool, which should be installed when Perl is installed, or some hosts (like cPanel) may have a way to install Perl modules through cPanel. See: 
 
 L<http://dadamailproject.com/d/FAQ-installing_CPAN_Perl_modules.pod.html>
+
+=head2 LWP CPAN Perl Module
+
+Dada Mail requires the C<LWP> CPAN Perl Module, which needs to be installed separately, if it's not already available. 
 
 =head2 Configuration
 
