--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -28,9 +28,9 @@ L<http://dadamailproject.com/d/features-email_themes.pod>
 
 =head4 Email Themes
 
-Dada Mail now has support for, B<Email Themes>: collections of email templates that you may use to customize the look and feel of your email messages. 
+Dada Mail now has support for B<Email Themes>: collections of email templates that you may use to customize the look and feel of your email messages. 
 
-Currently, Dada Mail comes with one email theme and supports additional themes, helping people can create and share their own themes. 
+Currently, Dada Mail comes with one email theme and supports additional themes.
 
 =head4 Mass Mailing Email Layouts
 
@@ -40,7 +40,7 @@ Currently, the following layout options are available:
 
 =over
 
-=item *  Full Layout
+=item * Full Layout
 
 =item * Minimal Layout
 
@@ -54,7 +54,7 @@ Currently, the following layout options are available:
 
 Without needing to send a test message out, you can now preview how your mass mailing will look, right in the Send a Message screen. This makes it easy to try different layouts and other options out, before comitting to sending to your entire mailing list. 
 
-=head4 Set an image and social network links in messages
+=head4 Set a logo image as well as social network links in your email messages
 
 The newly improved HTML email messages also support showing a logo, and list social media likns - these all can be set 
 under B<Mailing List - List Information>
