Cleaning things up!

--- a/dada/extras/documentation/pod_source/list_settings_described.pod
+++ b/dada/extras/documentation/pod_source/list_settings_described.pod
@@ -400,7 +400,7 @@ L<http://dadamailproject.com/d/features-public_and_private_lists.pod.html>
     # Bridge Plugin:
 
     group_list                     => 0,
-	group_list_pp_mode             => 1, 
+	#group_list_pp_mode             => 1, 
 	group_list_pp_mode_from_phrase => '<!-- tmpl_var original_from_phrase default="Subscriber" --> p.p. <!-- tmpl_var list_settings.list_name -->',  
 	
     open_discussion_list => 0,
